<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA"
    android:fitsSystemWindows="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/nav_back">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/record_addition"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:src="@mipmap/ic_delete"
            app:layout_constraintEnd_toEndOf="@+id/info_layout"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_ffffff_r12"
                android:orientation="vertical"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/stage_level"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@mipmap/heartbeat_level_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/stage_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/app_name"
                    android:textColor="@color/color_0b0a0f"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/stage_level"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/stage_level"
                    app:layout_constraintTop_toTopOf="@+id/stage_level" />

                <TextView
                    android:id="@+id/stage_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Systolic blood pressure90, diastolic blood pressure 75"
                    android:textColor="@color/color_878892"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/stage_level"
                    app:layout_constraintTop_toBottomOf="@+id/stage_level" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_ffffff_r16"
                android:orientation="vertical"
                android:padding="14dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record_add_tips"
                    android:textColor="@color/color_0b0a0f"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="2023-07-13   17:01"
                    android:textColor="@color/color_878892"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_max"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_f5f7fa_r12"
                        android:digits="@string/input_number"
                        android:hint="@string/record_add_max_hint"
                        android:inputType="number"
                        android:paddingStart="20dp"
                        android:textColor="@color/color_0b0a0f"
                        android:textColorHint="@color/color_878892"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_min"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_f5f7fa_r12"
                        android:digits="@string/input_number"
                        android:hint="@string/record_add_min_hint"
                        android:inputType="number"
                        android:paddingStart="20dp"
                        android:textColor="@color/color_0b0a0f"
                        android:textColorHint="@color/color_878892"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_ave"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_f5f7fa_r12"
                        android:digits="@string/input_number"
                        android:hint="@string/record_add_ave_hint"
                        android:inputType="number"
                        android:paddingStart="20dp"
                        android:textColor="@color/color_0b0a0f"
                        android:textColorHint="@color/color_878892"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottombar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/btn_save"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/shape_ff5259_to_ff1c1c_tr24"
                    android:gravity="center"
                    android:paddingStart="36dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="36dp"
                    android:paddingBottom="12dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>